[package]
name = "card"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "help"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.27"
eyre = "0.6.9"
home = "0.5.5"